Finished Logo Generator

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "logogenerator",
   "version": "1.0.0",
-  "description": "",
+  "description": "## Description",
   "main": "index.js",
   "directories": {
     "example": "examples",
@@ -16,5 +16,7 @@
     "inquirer": "^8.2.6",
     "jest": "^29.7.0",
     "node": "^21.1.0"
-  }
+  },
+  "devDependencies": {},
+  "keywords": []
 }
